Wed Jun 10 02:20:40 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/IIOP_Endpoint.h:
        
          fix compile error.

Tue Jun  9 23:17:14 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * utils/logWalker/HostProcess.cpp:
        * utils/logWalker/Invocation.cpp:
        * utils/logWalker/Log.cpp:
        * utils/logWalker/PeerProcess.cpp:
        * utils/logWalker/Thread.cpp:
        * utils/logWalker/logWalker.cpp:
        * utils/logWalker/logWalker.mpc:

          Fuzz fix.

Tue Jun  9 22:26:07 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * utils/README:
        * utils/logWalker:
        * NEWS:

          Adding a new utility for parsing TAO debug log files.

Tue Jun  9 22:04:49 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_IDL/contrib/mcpp/internal.H:
        * TAO_IDL/contrib/mcpp/lib.cpp:
        * TAO_IDL/contrib/mcpp/system.cpp:

          Compile warning fixes.

Tue Jun  9 21:01:30 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_IDL/contrib/mcpp/directive.cpp:
        * TAO_IDL/contrib/mcpp/eval.cpp:
        * TAO_IDL/contrib/mcpp/expand.cpp:
        * TAO_IDL/contrib/mcpp/internal.H:
        * TAO_IDL/contrib/mcpp/main.cpp:
        * TAO_IDL/contrib/mcpp/mbchar.cpp:
        * TAO_IDL/contrib/mcpp/mcpp.mpc:
        * TAO_IDL/contrib/mcpp/noconfig.H:
        * TAO_IDL/contrib/mcpp/support.cpp:
        * TAO_IDL/contrib/mcpp/system.H:
        * TAO_IDL/contrib/mcpp/system.cpp:

          Compile warning fixes.

Tue Jun  9 20:25:50 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * bin/tao_orb_tests.lst:
        * tao/IIOP_Endpoint.h:
        * tao/IIOP_Endpoint.cpp:
        * tao/IIOP_Profile.h:
        * tao/IIOP_Profile.cpp:

          Fix for bug #3695.  Keep alternate endpoints within a profile in
          the same order after marshalling/demarshalling so that is_equivalent
          return true.

Tue Jun  9 15:37:40 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>
